# predictionmarketbot

./: .gitignore  README.md
.claude/: launch.json
frontend/: BUILD_LOG.md  ROADMAP.md  package.json
frontend/.claude/: launch.json
frontend/app/: globals.css  layout.tsx
frontend/app/api/activity/: route.ts
frontend/app/api/agent-wallet/: route.ts
frontend/app/api/alert-log/: route.ts
frontend/app/api/approvals/: route.ts
frontend/app/api/approvals/[id]/: route.ts
frontend/app/api/arb/ai-cache/: route.ts
frontend/app/api/arb/history/: route.ts
frontend/app/api/arb/kalshi-positions/: route.ts
frontend/app/api/arb/match-score/: route.ts
frontend/app/api/arb/notes/: route.ts
frontend/app/api/arb/orderbook/: route.ts
frontend/app/api/arb/resolution/: route.ts
frontend/app/api/arb/scan-log/: route.ts
frontend/app/api/audit/: route.ts
frontend/app/api/markets/: route.ts
frontend/app/api/portfolio-snapshot/: route.ts
frontend/app/api/positions/: route.ts
frontend/app/api/rules/: route.ts
frontend/app/api/signals/: route.ts
frontend/app/approvals/: page.tsx
frontend/app/arb/: page.tsx
frontend/app/architecture/: page.tsx
frontend/app/audit/: page.tsx
frontend/app/markets/: page.tsx
frontend/app/positions/: page.tsx
frontend/app/rules/: page.tsx
frontend/app/rules/new/: page.tsx
frontend/app/signals/: page.tsx
frontend/components/: nav-sidebar.tsx
frontend/components/ui/: switch.tsx
ws-sidecar/: BUILD_LOG.md  ROADMAP.md  pyproject.toml  subscriptions.json
ws-sidecar/ws_sidecar/: __main__.py  client.py  config.py
(+5 files in other folders)
