[project]
name = "ws-sidecar"
version = "0.1.0"
description = "Polymarket CLOB WebSocket sidecar — market data to filesystem"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
ws-sidecar = "ws_sidecar.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ws_sidecar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error"]
